--- a/subprojects/performance/src/templates/archivePerformanceProject/build.gradle
+++ b/subprojects/performance/src/templates/archivePerformanceProject/build.gradle
@@ -25,7 +25,7 @@ task zip(type: Zip) {
 task visitZip(dependsOn: zip) {
     doLast {
         (1..4).each {
-            zipTree(zip.archivePath).each {
+            zipTree(zip.archiveFile).each {
                 logger.info it.path
             }
         }
@@ -39,7 +39,7 @@ task tar(type: Tar) {
 task visitTar(dependsOn: tar) {
     doLast {
         (1..4).each {
-            tarTree(tar.archivePath).each {
+            tarTree(tar.archiveFile).each {
                 logger.info it.path
             }
         }
@@ -54,7 +54,7 @@ task tarGz(type: Tar) {
 task visitTarGz(dependsOn: tarGz) {
     doLast {
         (1..4).each {
-            tarTree(tarGz.archivePath).each {
+            tarTree(tarGz.archiveFile).each {
                 logger.info it.path
             }
         }
